A bunch of changes. Adds bulk starring, increases server size to handle this year's events, timezone fix, updates the calendar widget, adds agenda view.